--- a/PAGES/01b_basics/index.html
+++ b/PAGES/01b_basics/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>In the following, we cover the basic steps for getting started with Julia. As we haven&#39;t introduced functions or macros yet, we&#39;ll keep the discussion to a bare minimum. Specifically, we&#39;ll limit ourselves to setting up Julia in VS Code and presenting methods to add comments and file paths.</p>
+<p>In the following, we cover the basic steps for getting started with Julia. As we haven&#39;t introduced any tools available in Julia &#40;e.g., functions&#41;, we&#39;ll keep the discussion to a bare minimum. Specifically, we&#39;ll limit ourselves to setting up Julia in VS Code and presenting methods to add comments and file paths.</p>
 <p>      </div>
     </div>
   </div>
@@ -2941,7 +2941,7 @@ joinpath&#40;&quot;/&quot;, &quot;user&quot;, &quot;file.jl&quot;&#41;</code></p
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 12, 2025 
+          © Martin Alfaro <br>Last Modified March 14, 2025 
       </span> 
   </div> 
 </footer>
