--- a/PAGES/03d_scope/index.html
+++ b/PAGES/03d_scope/index.html
@@ -2834,8 +2834,15 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Global and Local Variables</h2></p>
-<p>A variable that is local to a function exists solely within that function&#39;s scope. This means that those variables cease to exist once the function finishes executing. Consequently, any attempt to reference local variables outside the function will result in an error.</p>
-<p>Variables local to a function encompass:  <em>i)</em> the function arguments, and  <em>ii)</em> variables defined in the function body. Any other variable included in a function that&#39;s not  <em>i)</em> or  <em>ii)</em> necessarily refers to a global variable. </p>
+<p>A variable that is local to a function exists solely within that function&#39;s scope. This means that these variables cease to exist once the function finishes executing. Consequently, any attempt to reference local variables outside the function will result in an error.</p>
+<p>Variables local to a function encompass: </p>
+<ol>
+<li><p>the function arguments,</p>
+</li>
+<li><p>the variables defined in the function body. </p>
+</li>
+</ol>
+<p>Any other variable included in a function that&#39;s not  <em>i)</em> or  <em>ii)</em> necessarily refers to a global variable. </p>
 <p>Understanding which variables are local or global is essential for predicting a program’s behavior. This is because a local variable may share the same name as a global one, without them being related. The following examples help clarify the differences between global and local variables.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2882,8 +2889,8 @@ end</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>The Role of Functions</h2></p>
-<p>In programming, <strong>functions</strong> can be understood <strong>as self-contained mini-programs to represent specific tasks</strong>. Under this interpretation, local variables simply act as labels that help articulate the mechanics of the task. Consequently, it&#39;s natural that variables local to a function are inaccessible outside it.  <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Local variables play a similar role to integration variables in math. Formally, in \(\int f\left(t\right)\,\mathrm{d}t\) for some function \(f\), \(t\) just represents a symbol indicating over which variable we&#39;re integrating. The integral could be equivalently expressed using any other integration variable, such as \(x\) in \(\int f\left(x\right)\,\mathrm{d}x\).  </span></span> </p>
-<p>To explain what this entails, consider a variable <code>x</code>, along with another variable <code>y</code> computed by transforming <code>x</code> through a function <code>f</code>. In particular, assume a transformation that doubles <code>x</code>, so that <code>y &#61; 2 * x</code>. The following are two approaches to calculating <code>y</code>.</p>
+<p>In programming, <strong>functions</strong> can be understood <strong>as self-contained mini-programs to represent specific tasks</strong>. Under this interpretation, local variables simply act as labels that help articulate the mechanics of the task. Consequently, the inaccessibility of local variables outside the function becomes natural.  <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Local variables play a similar role to integration variables in math. Formally, in \(\int f\left(t\right)\,\mathrm{d}t\) for some function \(f\), \(t\) just represents a symbol indicating over which variable we&#39;re integrating. The integral could be equivalently expressed using any other integration variable, such as \(x\) in \(\int f\left(x\right)\,\mathrm{d}x\).  </span></span> </p>
+<p>To explain this, consider a variable <code>x</code>, along with another variable <code>y</code> computed by transforming <code>x</code> through a function <code>f</code>. In particular, assume a transformation that doubles <code>x</code>, so that <code>y &#61; 2 * x</code>. The following are two approaches to calculating <code>y</code>.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3099,7 +3106,7 @@ expenditure_iPhones &#61; expenditure&#40;gross_value, tax_paid&#41;</code></pre
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 12, 2025 
+          © Martin Alfaro <br>Last Modified March 14, 2025 
       </span> 
   </div> 
 </footer>
