--- a/PAGES/03c_functions/index.html
+++ b/PAGES/03c_functions/index.html
@@ -2826,8 +2826,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>User-Defined Functions</h2></p>
-<p>When writing a script, you&#39;ll need to define your own functions. Function names follow similar rules to variable names. In particular, they accept Unicode characters, enabling the user to define functions such as <code>∑&#40;x&#41;</code>. Once you create them, functions can be called without invoking any prefix. This means that a function <code>foo</code> can be called by simply executing <code>foo&#40;x&#41;</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The method to call a function actually depends on the <strong>module</strong> in which it&#39;s defined, and whether this module has been &quot;imported&quot; or &quot;used&quot;. We won&#39;t cover modules on this website. However, they&#39;re essential when working for large projects, as each module operates as an independent workspace with its own variables. When initiating a new session in Julia, you&#39;re actually working within a module called <code>Main</code>.  </span></span></p>
-<p>There are two approaches to defining functions. We&#39;ll refer to each as the <strong>standard form</strong> and the <strong>compact form</strong>. The standard form is the most general and allows you to write both short and long functions. Conversely, the compact form is employed for single-line functions and is reminiscent of mathematical definitions. To illustrate each form, consider a function <code>foo</code> that sums two variables <code>x</code> and <code>y</code>. </p>
+<p>The first step to define your own functions is giving names. Function names follow similar rules to variable names. In particular, they accept Unicode characters, enabling the user to define functions such as <code>∑&#40;x&#41;</code>. Once you create them, functions can be called without invoking any prefix. This means that a function <code>foo</code> can be called by simply executing <code>foo&#40;x&#41;</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The method to call a function actually depends on the <strong>module</strong> in which it&#39;s defined, and whether this module has been &quot;imported&quot; or &quot;used&quot;. We won&#39;t cover modules on this website. However, they&#39;re essential when working for large projects, as each module operates as an independent workspace with its own variables. When initiating a new session in Julia, you&#39;re actually working within a module called <code>Main</code>.  </span></span></p>
+<p>There are two approaches to defining functions. We&#39;ll refer to each as the <strong>standard form</strong> and the <strong>compact form</strong>. The standard form is the most general and allows you to write both short and long functions. On the other hand, the compact form is employed for single-line functions and is reminiscent of mathematical definitions. To illustrate each form, consider a function <code>foo</code> that sums two variables <code>x</code> and <code>y</code>. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2845,7 +2845,7 @@ end</code></pre>
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>The output of the compact form is given by the only operation contained. For its part, the standard form returns the last line as its output. You can alternatively specify the output to return through the keyword <code>return</code>. You can also return multiple outputs by defining a collection as the function&#39;s result. For this purpose, tuples are the most common choice. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> This is in fact because tuples are more performant than vectors, as long as the number of elements is small.  </span></span> </p>
+<p>The output of the compact form is given by the only operation contained. For its part, the standard form defaults to returning the last line as its output, allowing you to specify the output via the keyword <code>return</code>. To return multiple outputs, you can use a collection, with tuples being the most common choice. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The reason for this is that tuples are more performant than vectors when the number of elements is small.  </span></span> </p>
 <p>These approaches to specifying an output are illustrated below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2942,9 +2942,9 @@ foo1&#40;x&#41; &#61; 2 &#43; foo2&#40;x&#41;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Positional and Keyword Arguments</h2></p>
-<p>Up to this point, we&#39;ve been defining and calling functions using the notation <code>foo&#40;x,y&#41;</code>. A key characteristic of this syntax is that arguments are passed in a specific order. Thus, <code>foo&#40;2,4&#41;</code> assigns the first argument to <code>x</code> and the second to <code>y</code>. These types of function arguments are known as <strong>positional arguments</strong>.</p>
-<p>However, a major drawback of positional arguments is their susceptibility to silent errors: if we accidentally swap the positions of the arguments, the function may still provide an output. As the number of arguments grows, the likelihood of introducing this bug increases, making it more challenging to identify and resolve errors.</p>
-<p>To circumvent this issue, we can use <strong>keyword arguments</strong>. This approach requires function calls to explicitly specify their arguments through a syntax <code>foo&#40;x&#61;2,y&#61;4&#41;</code>. In this case, the order of arguments also becomes irrelevant, rendering <code>foo&#40;x&#61;2,y&#61;4&#41;</code> and <code>foo&#40;y&#61;4,x&#61;2&#41;</code> valid and equivalent.</p>
+<p>Up to this point, we&#39;ve been defining and calling functions using the notation <code>foo&#40;x,y&#41;</code>. A key characteristic of this syntax is that arguments are passed in a specific order, so that <code>foo&#40;2,4&#41;</code> assigns the first argument to <code>x</code> and the second to <code>y</code>. This approach is known as <strong>positional arguments</strong>.</p>
+<p>However, a major drawback of positional arguments is their susceptibility to silent errors: if we accidentally swap the positions of the arguments, the function may still provide an output. As the number of arguments grows, the likelihood of introducing such bugs increases, making it more challenging to identify and resolve errors.</p>
+<p>To circumvent this issue, we can rely on <strong>keyword arguments</strong>. This approach requires function calls to explicitly specify their arguments, making their order irrelevant. For example, <code>foo&#40;x&#61;2,y&#61;4&#41;</code> and <code>foo&#40;y&#61;4,x&#61;2&#41;</code> would then be valid and equivalent.</p>
 <p>The following examples illustrate how to define and call functions using both positional and keyword arguments. Additionally, we&#39;ll establish that the approaches can be combined. Note that positional arguments necessarily require a semicolon during function definitions, but accept either a semicolon or a comma during function calls.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2970,7 +2970,7 @@ foo1&#40;x&#41; &#61; 2 &#43; foo2&#40;x&#41;</code></pre>
  </div></div>
 <p>  </p></details></div>
  <h4> Keyword Arguments with Default Values </h4>
-<p>An additional advantage of keyword arguments is that they make it possible to set default values. This feature simplifies function calls by allowing users to omit certain arguments, which will then take on the predefined default values. The following examples illustrate how this feature works in practice,</p>
+<p>Keyword arguments accept default values, allowing users to omit certain arguments when the function is called. The following examples illustrate how this feature works in practice, where the omitted arguments take on their default values. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3036,8 +3036,7 @@ z &#61; &#91;2,3&#93;</code></pre>
         <h2>Anonymous Functions</h2></p>
 <p>Anonymous functions offer a third way to define functions. Unlike the previous methods, they&#39;re commonly introduced with a different purpose: to serve as inputs to other functions. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Anonymous functions are also known as  <em>lambda functions</em> in other languages.  </span></span> </p>
 <p>As the name suggests, anonymous functions aren&#39;t referenced by a name. Their syntax resembles the arrow notation from mathematics &#40;e.g. \(x\mapsto \sqrt{x}\)&#41;. Specifically, single-argument functions are expressed as <code>x -&gt; &lt;body of the function&gt;</code>. Likewise, functions with two or more arguments are expressed by <code>&#40;x,y&#41; -&gt; &lt;body of the function&gt;</code>. </p>
-<p>To demonstrate the syntax, let&#39;s consider the built-in function <code>map&#40;&lt;function&gt;, &lt;collection&gt;&#41;</code>. This function takes a function as its first argument, and is applied element-wise to the collection passed as a second argument. For example, <code>map&#40;add_two, x&#41;</code> applies the function <code>add_two&#40;a&#41; &#61; a &#43; 2</code> to each element of <code>x &#61; &#91;1,2,3&#93;</code>, thus returning <code>&#91;3,4,5&#93;</code>. In subsequent sections, we&#39;ll explain the function <code>map</code> in detail. At this point, <code>map</code> only should be understood as an example of anonymous functions.</p>
-<p>One drawback of executing <code>map&#40;add_two, x&#41;</code> is that it requires defining <code>add_two</code> beforehand. Creating temporary functions will clutter our workspace, which is particularly inconvenient if <code>add_two</code> won&#39;t be reused. In this context, anonymous functions provide an elegant solution, eliminating the need to create temporary functions like <code>add_two</code>.</p>
+<p>To demonstrate the role of anonymous functions, let&#39;s consider the built-in function <code>map&#40;&lt;function&gt;, &lt;collection&gt;&#41;</code>. This applies <code>&lt;function&gt;</code> element-wise to each element of <code>&lt;collection&gt;</code>. For example, <code>map&#40;add_two, x&#41;</code> applies the function <code>add_two&#40;a&#41; &#61; a &#43; 2</code> to each element of <code>x &#61; &#91;1,2,3&#93;</code>, thus returning <code>&#91;3,4,5&#93;</code>. Applying <code>map</code> in this way requires defining <code>add_two</code> beforehand, which unnecessarily pollutes the namespace if <code>add_two</code> won&#39;t be reused. Anonymous functions provide an elegant solution, by directly embedding the operation  within <code>map</code>. In this way, an anonymous function effectively eliminates the need of creating a temporary function like <code>add_two</code>.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3067,7 +3066,7 @@ result     &#61; map&#40;a -&gt; a &#43; 2, x&#41;</code></pre>
  5</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The function <code>map</code> can also be applied to demonstrate the syntax of anonymous functions with multiple arguments. In this case, the syntax becomes <code>map&#40;&lt;function&gt;, &lt;array1&gt;, &lt;array2&gt;&#41;</code>. For instance, <code>map&#40;&#43;, &#91;1,2&#93;, &#91;2,4&#93;&#41;</code> provides the sum of each pair of numbers, yielding <code>&#91;3,6&#93;</code>. </p>
+<p>The function <code>map</code> can also demonstrate the syntax of anonymous functions with multiple arguments. In those cases, the syntax becomes <code>map&#40;&lt;function&gt;, &lt;array1&gt;, &lt;array2&gt;&#41;</code>. For instance, <code>map&#40;&#43;, &#91;1,2&#93;, &#91;2,4&#93;&#41;</code> provides the sum of each pair of numbers, yielding <code>&#91;3,6&#93;</code>. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3100,7 +3099,7 @@ result   &#61; map&#40;&#40;a,b&#41; -&gt; a &#43; b, x, y&#41;</code></pre>
  </div></div>
 <p>  </p></details></div>
 <p> <h4> The &quot;Do-Block&quot; Syntax </h4><div class="own-anchors"><a name="do-syntax"></a></div></p>
-<p>Anonymous functions can help keep our code tidy, but they may not be practical for functions that span multiple lines. This inconvenience can be addressed by what&#39;s known as a <span style="color: rgb(62, 121, 180);"><strong>do-block</strong></span>. This allows us to insert the anonymous function separately, and then pass it as the first argument to a function call. Given a function <code>foo&#40;&lt;inner function&gt;, &lt;vector&gt;&#41;</code>, its generic implementation is as follows.</p>
+<p>Anonymous functions can help keep our code tidy, but they may not be practical for functions that span multiple lines. This inconvenience can be addressed by what&#39;s known as <span style="color: rgb(62, 121, 180);"><strong>do-blocks</strong></span>. They allow us to insert the anonymous function separately, and then pass it as the first argument to a function call. Given a function <code>foo&#40;&lt;inner function&gt;, &lt;vector&gt;&#41;</code>, its generic implementation is as follows.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3211,8 +3210,7 @@ result   &#61; map&#40;x,y&#41; do a,b      # not &#40;a,b&#41;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>A Function's Documentation (<strong><i style="color:red">OPTIONAL</i></strong>)</h2></p>
-<p>To conclude this section, we cover how to document user-defined functions. This involves adding a string expression immediately before the function definition.</p>
-<p>After this, the documentation can be accessed in the same manner as with built-in functions: you can type the function&#39;s name in the REPL after pressing  <kbd> ?</kbd>, or directly hover over the function&#39;s name in VS Code. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> <a href="/julia_book/PAGES/01c_vscode/#features_and_keyboard_shortcuts">Here</a>, we explained how to access a function&#39;s documentation, under the subtitle &quot;To See The Documentation of a Function&quot;.  </span></span> </p>
+<p>To conclude this section, we cover how to document functions. This can be done by adding a string expression immediately before the function definition. Once this is done, the documentation can be accessed in the same manner as with built-in functions: you can type the function&#39;s name in the REPL after pressing  <kbd> ?</kbd>, or directly hover over the function&#39;s name in VS Code. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> <a href="/julia_book/PAGES/01c_vscode/#features_and_keyboard_shortcuts">Here</a>, we explained how to access a function&#39;s documentation, under the subtitle &quot;To See The Documentation of a Function&quot;.  </span></span> </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3255,7 +3253,7 @@ add_three&#40;a&#41; &#61; a &#43; 3</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 12, 2025 
+          © Martin Alfaro <br>Last Modified March 14, 2025 
       </span> 
   </div> 
 </footer>
