--- a/PAGES/05e_slices/index.html
+++ b/PAGES/05e_slices/index.html
@@ -2816,15 +2816,15 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section concludes the coverage of preliminary concepts for mutations, focusing on the behavior of a vector&#39;s slice. A <span style="color: rgb(62, 121, 180);"><strong>slice</strong></span> is defined as a subset of a vector&#39;s elements, and is formally represented as <code>x&#91;&lt;indices&gt;&#93;</code>. </p>
-<p>Importantly, <strong>slices act differently depending on how they're included in a statement</strong>. Specifically, slices can act as either:</p>
+<p>This section concludes the coverage of preliminary concepts for exploring mutations. The focus is now on the behavior of a vector&#39;s <span style="color: rgb(62, 121, 180);"><strong>slice</strong></span>, defined as a subset of a vector&#39;s elements and formally represented as <code>x&#91;&lt;indices&gt;&#93;</code>. </p>
+<p>Importantly, <strong>slices act differently depending on how they're included in a statement</strong>, behaving as either:</p>
 <ul>
 <li><p><span style="color: rgb(62, 121, 180);"><strong>copies</strong></span> of the original vector, thus creating a new object at a new memory address. </p>
 </li>
 <li><p><span style="color: rgb(62, 121, 180);"><strong>views</strong></span> of the original vector, where the original object and the slice share the same memory address.</p>
 </li>
 </ul>
-<p>In the following, we explain in detail this distinction. Understanding it is crucial for mutating slices, as mutations can only occur when the slice references the original object. Formally, we say that the slice must act as a view, so that any modifications made to the slice will affect the parent object. In contrast, if a slice acts as a copy, the parent object and the slice are unrelated, and changes to the slice have no impact on the original object.</p>
+<p>In the following, we explain the distinction between copies and views in detail. Understanding it is crucial for mutating slices, as mutations can only occur when the slice references the original object. In other words, the slice must be a view. In contrast, if a slice acts as a copy, the parent object and the slice are unrelated, with changes to the slice having no impact on the original object.</p>
 <p>      </div>
     </div>
   </div>
@@ -2834,8 +2834,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Slices and the Assignment Operator</h2></p>
-<p>Vector mutation requires modifying slices through the operator <code>&#61;</code>. For this to be possible, the slice needs to reference the original object. Nonetheless, the behavior of slices in assignments varies, depending on their placement within the expression.</p>
-<p>Specifically, <strong>slices on the left-hand (LHS) side of</strong> <code>&#61;</code> <strong>act as views</strong>. This means that these slices reference the original elements, thus allowing for the mutation of its parent object. In contrast, <strong>slices on the right-hand side (RHS) of</strong> <code>&#61;</code> <strong>create a copy</strong>, and therefore point to a new object. Consequently, any modification made to the slice won&#39;t affect the original object. </p>
+<p>Vector mutation requires modifying slices through the operator <code>&#61;</code>. For this to be possible, a prerequisite is that the slice references the original object. Nonetheless, the behavior of slices in assignments varies depending on their placement within the expression.</p>
+<p>Specifically, <strong>slices on the left-hand (LHS) side of</strong> <code>&#61;</code> <strong>act as views</strong>. In this case, slices reference the original elements, thus allowing for the mutation of its parent object. In contrast, <strong>slices on the right-hand side (RHS) of</strong> <code>&#61;</code> <strong>create a copy</strong>. Since copies point to a new object, any modification to the slice won&#39;t affect the original object. </p>
 <p>The following code snippet demonstrates each behavior.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2900,7 +2900,8 @@ x&#91;1&#93; &#61; 0        # it does NOT modify &#39;y&#39;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>The Function 'view'</h2></p>
-<p>Identifying when slices act as copies or views will take significance when exploring high performance, as views avoid the overhead of memory allocations. Considering this, it&#39;s important to distinguish between copies and slices beyond assignments. Broadly speaking, <strong>slices typically default to creating copies</strong>. This is the case when, for instance, a slice is passed as a function argument or when used within an expression. These scenarios are illustrated below.</p>
+<p>Identifying when slices act as copies or views is relevant for high performance, since views avoid the overhead associated with memory allocations. While this topic will be explored in Part II, facts like this highlight the importance of distinguishing between copies and slices beyond assignments. </p>
+<p>As a rule of thumb, <strong>slices typically default to creating copies</strong>. This is the case when, for instance, a slice is passed as a function argument or when used within an expression not involving an assignment. These scenarios are illustrated below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2920,7 +2921,7 @@ x&#91;1:2&#93; .&#43; 2
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>In all these cases, transforming slices into views requires explicit indicating it. This can be achieved via the function <code>view</code>, whose syntax is <code>view&#40;x, &lt;indices&gt;&#41;</code>, where <code>&lt;indices&gt;</code> represent the subset of indices defining the slice. To demonstrate its usage, we revisit and compare the previous code snippet.</p>
+<p>In all these cases, transforming slices into views requires an explicit indication. To achieve this, you need to employ the function <code>view</code>. Its syntax is <code>view&#40;x, &lt;indices&gt;&#41;</code>, where <code>&lt;indices&gt;</code> represent the subset of indices defining the slice. To demonstrate its usage, we revisit and compare the previous code snippet.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2954,8 +2955,8 @@ x&#91;1:2&#93; .&#43; 2
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>The previous examples highlight the verbosity of the <code>view</code> function, particularly when multiple slices are involved. To address this issue, Julia provides the macros <code>@view</code> and <code>@views</code>.</p>
-<p>The <code>@view</code> macro simplifies notation by converting expressions like <code>view&#40;x, 1:2&#41;</code> into <code>@view x&#91;1:2&#93;</code>. However, its advantages are somewhat limited: it saves only a few characters and requires parentheses when multiple slices are used &#40;e.g., <code>@view&#40;x&#91;1:2&#93;&#41; .&#43; @view&#40;x&#91;2:3&#93;&#41;</code>&#41;. In contrast, the <code>@views</code> macro significantly streamlines notation, by automatically converting  <em>every</em> slice within an expression into a view.</p>
+<p>These examples reveal the potential verbosity involved when <code>view</code> isn&#39;t sparsely used. To address this issue, Julia provides the macros <code>@view</code> and <code>@views</code>.</p>
+<p>The <code>@view</code> macro is equivalent to <code>view</code>, allowing you to write <code>@view x&#91;1:2&#93;</code> instead <code>view&#40;x, 1:2&#41;</code>. However, its advantages are somewhat limited: it saves only a few characters, and additionally necessarily requires parentheses when multiple slices are used &#40;e.g., <code>@view&#40;x&#91;1:2&#93;&#41; .&#43; @view&#40;x&#91;2:3&#93;&#41;</code>&#41;. In contrast, the <code>@views</code> macro significantly streamlines notation, by automatically converting  <em>every</em> slice within an expression into a view.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2971,7 +2972,7 @@ x&#91;1:2&#93; .&#43; 2
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
-<p>One of the most notable applications of <code>@views</code> is in function definitions. By placing <code>@views</code> at the beginning, you can automatically convert every slice within the function body into a view.</p>
+<p>One of the most notable applications of <code>@views</code> is in functions. By placing <code>@views</code> at the beginning of a function, you automatically convert every slice within the function body or its arguments into a view.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3019,7 +3020,7 @@ end</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 12, 2025 
+          © Martin Alfaro <br>Last Modified March 14, 2025 
       </span> 
   </div> 
 </footer>
