--- a/PAGES/05g_views/index.html
+++ b/PAGES/05g_views/index.html
@@ -2816,8 +2816,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>This section explores approaches for updating the values of a vector, a technique commonly known as <span style="color: rgb(62, 121, 180);"><strong>in-place assignments</strong></span>. The method involves replacing existing elements with new values, giving rise to the expression &quot; <em>modifying values in place</em>.&quot;</p>
-<p>In each of the following sections, we&#39;ll present a different approach to mutating vectors. The benefits of in-place assignments will become clear in Part II, when we analyze performance. Basically, they enable the reuse of the same vector, thus eliminating the need for memory allocations to create a new object. </p>
+<p>This section focuses on <span style="color: rgb(62, 121, 180);"><strong>in-place assignments</strong></span>, a technique for updating vector values efficiently. Essentially, this entails modifying existing elements with new values, giving rise to the expression &quot; <em>modifying values in place</em>.&quot;</p>
+<p>In the following subsections, we&#39;ll explore specific approaches to modifying vectors. The advantages of in-place assignments will become apparent in Part II, when we discuss performance. Essentially, they allow us to reuse the same vector, eliminating the need to allocate memory for a new object.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> </span>  </div>  <div class=content>     Although called &quot;in-place assignments&quot;, <strong>the concept is related to mutations rather than assignments</strong>. The name simply reflects that the technique involves the assignment operator <code>&#61;</code>, which can be used for either purposes.  </div>  </div>
@@ -2833,8 +2833,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Mutation Via Vectors</h2></p>
-<p>The most straightforward way to mutate a vector is by replacing a slice with another vector. This can be achieved with statements of the form <code>x&#91;&lt;indices&gt;&#93; &#61; &lt;expression&gt;</code>, where <code>&lt;expression&gt;</code> must match the length of <code>x&#91;&lt;indices&gt;&#93;</code>. The method is based on that a slice on the left-hand side of <code>&#61;</code> behaves as a view, thus referencing to the original object rather than to a new one.  </p>
-<p>The following examples show that any indexing method can be applied to define <code>x&#91;&lt;indices&gt;&#93;</code>. It also shows that scalars can be used instead of vectors when the slice comprises a single element, </p>
+<p>The most straightforward way to mutate a vector is by replacing a slice with another vector. This can be achieved via statements of the form <code>x&#91;&lt;indices&gt;&#93; &#61; &lt;expression&gt;</code>, where <code>&lt;expression&gt;</code> must match the length of <code>x&#91;&lt;indices&gt;&#93;</code>. The method relies on that a slice on the left-hand side of <code>&#61;</code> behaves as a view, thus referencing to the original object.</p>
+<p>The following examples show that any indexing method can be applied to define <code>x&#91;&lt;indices&gt;&#93;</code>. It also shows that scalars can be used instead of vectors when the slice comprises a single element.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3185,7 +3185,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 12, 2025 
+          © Martin Alfaro <br>Last Modified March 14, 2025 
       </span> 
   </div> 
 </footer>
